Build introspection (subprojects_map.json support)
This is some experimental code that can extract some interesting info
from TheRock's cmake build setup, for processing by other tools (TBD!).
It emits a JSON file mapping subproject names to various information
such as the relative source and build directories, subproject-granularity
build dependencies and the actions for each "subproject+action" target.

The creation of the JSON file is controlled by a cmake option,
-DTHEROCK_INTROSPECTION=ON.

This is my first cmake code, so likely isn't very idiomatic.

Example (reformatted!):

{
    [...]
      hipBLAS: {
        src: 'rocm-libraries/projects/hipblas',
        bin: 'math-libs/BLAS/hipBLAS/build',
        install_dest: '',
        build_deps: ['hipBLAS-common', 'rocm-cmake', 'therock-googletest'],
        runtime_deps: [
          'amd-llvm',
          'amd-comgr',
          'hipcc',
          'rocm-core',
          'rocprofiler-register',
          'ROCR-Runtime',
          'rocminfo',
          'hip-clr',
          'therock-host-blas',
          'roctracer',
          'aqlprofile',
          'rocprof-trace-decoder',
          'rocprofiler-sdk',
          'rocRoller',
          'rocm_smi_lib',
          'hipBLASLt',
          'rocBLAS',
          'rocSOLVER'
        ],
        build_pool: 'therock_background',
        compiler_toolchain: 'amd-hip',
        actions: ['configure', 'build', 'stage', 'dist', 'expunge']
      },
    [...]
}

Let me know if this seems generally useful, or if there's an easier way of
obtaining similar information (maybe in a different format?).  Additional
data fields can of course be added to the JSON output as necessary.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ include(therock_external_source)
 include(therock_features)
 include(therock_sanitizers)
 include(therock_subproject)
+include(therock_subproject_introspection)
 include(therock_job_pools)
 include(therock_testing)
 
@@ -467,3 +468,7 @@ endif()
 # Finalization
 ################################################################################
 therock_subproject_merge_compile_commands()
+
+if (THEROCK_INTROSPECTION)
+  therock_introspect_subprojects()
+endif()
