new ci weekly + new, refactored amdgpu matrix generator + base representation

--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -29,6 +29,11 @@ on:
         default: false
       extra_cmake_options:
         type: string
+      # TODO remove late the default when switchting to using the new_setup.yml
+      container_image:
+        type: string
+        required: false
+        default: 'ghcr.io/rocm/therock_build_manylinux_x86_64@sha256:2f3ebd0beb04c449fdb36933e54bdc69483b914fb9005594d3fc9444c206b54b'
 
   workflow_call:
     inputs:
@@ -49,6 +54,11 @@ on:
         type: boolean
       extra_cmake_options:
         type: string
+      # TODO remove late the default when switchting to using the new_setup.yml
+      container_image:
+        type: string
+        required: false
+        default: 'ghcr.io/rocm/therock_build_manylinux_x86_64@sha256:2f3ebd0beb04c449fdb36933e54bdc69483b914fb9005594d3fc9444c206b54b'
 
 # See the details regarding permissions from the link:
 # https://github.com/aws-actions/configure-aws-credentials?tab=readme-ov-file#oidc
@@ -66,7 +76,7 @@ jobs:
     permissions:
       id-token: write
     container:
-      image: ghcr.io/rocm/therock_build_manylinux_x86_64@sha256:d6ae5712a9c7e8b88281d021e907b312cd8a26295b95690baef3e8dde4805858
+      image: ${{ inputs.container_image }}
       # --cap-add=SYS_PTRACE : to enable ptrace insided the build container for tsan builds
       # --security-opt seccomp=unconfined : to disable the system call filtering for tsan builds
       options: -v /runner/config:/home/awsconfig/ --cap-add=SYS_PTRACE --security-opt seccomp=unconfined
