--- a/profiler/CMakeLists.txt
+++ b/profiler/CMakeLists.txt
@@ -31,9 +31,17 @@ if(THEROCK_ENABLE_ROCPROFV3)
     EXTERNAL_SOURCE_DIR "${THEROCK_ROCM_SYSTEMS_SOURCE_DIR}/projects/aqlprofile"
     BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/aqlprofile"
     BACKGROUND_BUILD
+    CMAKE_ARGS
+      -DAQLPROFILE_BUILD_TESTS=ON
+      -DHIP_PLATFORM="amd"
+    COMPILER_TOOLCHAIN
+      amd-hip
     INTERFACE_LINK_DIRS
       lib  # So that dependents can find the aqlprofile library via find_library
+    BUILD_DEPS
+      therock-googletest
     RUNTIME_DEPS
+      hip-clr
       amd-llvm
       ROCR-Runtime
   )
@@ -175,6 +183,7 @@ if(THEROCK_ENABLE_ROCPROFV3)
       doc
       lib
       run
+      test
     SUBPROJECT_DEPS
       aqlprofile
       rocprofiler-sdk
