Add libhipcxx configurations + declare Windows as unsupported OS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,6 +147,7 @@ cmake_path(ABSOLUTE_PATH THEROCK_ROCM_SYSTEMS_SOURCE_DIR NORMALIZE)
 therock_enable_external_source("rccl" "${THEROCK_SOURCE_DIR}/comm-libs/rccl" OFF)
 therock_enable_external_source("rccl-tests" "${THEROCK_SOURCE_DIR}/comm-libs/rccl-tests" OFF)
 therock_enable_external_source("composable-kernel" "${THEROCK_SOURCE_DIR}/ml-libs/composable_kernel" OFF)
+therock_enable_external_source("libhipcxx" "${THEROCK_SOURCE_DIR}/math-libs/libhipcxx" OFF)
 
 # Overall build settings.
 option(THEROCK_VERBOSE "Enables verbose CMake statuses" OFF)
@@ -299,6 +300,13 @@ therock_add_feature(SOLVER
   REQUIRES BLAS PRIM SPARSE ${_solver_platform_requirements}
 )
 
+if(NOT WIN32)
+  therock_add_feature(LIBHIPCXX
+    GROUP MATH_LIBS
+    DESCRIPTION "Enables libhipcxx"
+    REQUIRES COMPILER HIP_RUNTIME
+  )
+endif()
 
 # Finalize all feature flags.
 therock_finalize_features()
