Add rocgdb to TheRock (Linux)
* Motivation

Add rocgdb to the debug tools feature, to be built alongside the
ROCdbgapi.

Please note this is restricted to Linux builds for now. Windows builds will
come at a later stage.

* Technical Details

- Adjust debug-tools/CMakeLists.txt to handle the new rocgdb component.
- Add new rocgdb submodule that will populate debug-tools/rocgdb with
  amd-staging branch of https://github.com/ROCm/ROCgdb.
- New rocgdb.cmake wrapper to build gdb since its build system is
  autotools-based.

* Test Plan

- Validate that rocgdb builds and pulls its amd-dbgapi dependency.
- Validate that rocgdb installs its files in their right places.
- Validate that rocgdb is functional when built within TheRock.

* Test Result

All tests passed.

Requires bison, flex, gmp, mpfr, expat, texinfo, ncurses, ncurses-dev,
python-dev, liblzma, libz, zstd and librocm-dbgapi.

--- a/BUILD_TOPOLOGY.toml
+++ b/BUILD_TOPOLOGY.toml
@@ -88,7 +88,7 @@ submodules = ["llvm-project", "HIPIFY", "spirv-llvm-translator"]
 
 [source_sets.debug-tools]
 description = "ROCm debug tools submodules"
-submodules = ["amd-dbgapi", "rocr-debug-agent", "rocr-debug-agent-tests"]
+submodules = ["amd-dbgapi", "rocgdb", "rocr-debug-agent", "rocr-debug-agent-tests"]
 
 [source_sets.rocm-systems]
 description = "ROCm systems monorepo (runtime, profiler, etc.)"
@@ -587,5 +587,12 @@ disable_platforms = ["windows"]
 artifact_group = "debug-tools"
 type = "target-specific"
 artifact_deps = ["rocr-debug-agent", "core-hip"]
+feature_group = "DEBUG_TOOLS"  # Part of DEBUG_TOOLS, enabled by default via THEROCK_ENABLE_ALL
+disable_platforms = ["windows"]
+
+[artifacts.rocgdb]
+artifact_group = "debug-tools"
+type = "target-neutral"
+artifact_deps = ["amd-llvm", "amd-dbgapi", "sysdeps-gmp", "sysdeps-mpfr", "sysdeps-expat", "sysdeps-ncurses"]
 feature_group = "DEBUG_TOOLS"  # Part of DEBUG_TOOLS, enabled by default via THEROCK_ENABLE_ALL
 disable_platforms = ["windows"]
