--- a/.gitmodules
+++ b/.gitmodules
@@ -60,6 +60,10 @@
 	path = debug-tools/amd-dbgapi
 	url = https://github.com/ROCm/ROCdbgapi.git
 	branch = amd-staging
+[submodule "rocgdb"]
+	path = debug-tools/rocgdb
+	url = https://github.com/ROCm/rocgdb.git
+	branch = amd-staging
 [submodule "rocr-debug-agent"]
 	path = debug-tools/rocr-debug-agent
 	url = https://github.com/ROCm/rocr_debug_agent.git
