move aqlprofile to it's own artifact package

--- a/profiler/CMakeLists.txt
+++ b/profiler/CMakeLists.txt
@@ -50,6 +50,19 @@ if(THEROCK_ENABLE_ROCPROFV3)
   )
   therock_cmake_subproject_activate(aqlprofile)
 
+  therock_provide_artifact(aqlprofile
+    DESCRIPTOR artifact-aqlprofile.toml
+    COMPONENTS
+      dbg
+      dev
+      doc
+      lib
+      run
+      test
+    SUBPROJECT_DEPS
+      aqlprofile
+  )
+
   ##############################################################################
   # rocprofiler-sdk
   ##############################################################################
@@ -185,7 +198,6 @@ if(THEROCK_ENABLE_ROCPROFV3)
       run
       test
     SUBPROJECT_DEPS
-      aqlprofile
       rocprofiler-sdk
       roctracer
       ${_rocprofiler_sdk_optional_deps}
@@ -202,7 +214,6 @@ if(THEROCK_ENABLE_ROCPROFV3)
       run
       test
     SUBPROJECT_DEPS
-      aqlprofile
       rocprofiler-sdk
       rocprofiler-compute
       roctracer
