--- a/BUILD_TOPOLOGY.toml
+++ b/BUILD_TOPOLOGY.toml
@@ -545,7 +545,7 @@ disable_platforms = ["windows"]
 
 [artifacts.aqlprofile]
 artifact_group = "profiler-core"
-type = "target-neutral"
+type = "target-specific"
 artifact_deps = ["core-runtime"]
 feature_group = "PROFILER"
 disable_platforms = ["windows"]
