--- a/ml-libs/CMakeLists.txt
+++ b/ml-libs/CMakeLists.txt
@@ -93,6 +93,8 @@ if(THEROCK_ENABLE_MIOPEN)
     set(_THEROCK_MIOPEN_ENABLE_TESTING ${THEROCK_BUILD_TESTING})
   endif()
 
+  get_property(_hipblaslt_declared GLOBAL PROPERTY THEROCK_HIPBLASLT_DECLARED)
+
   therock_cmake_subproject_declare(MIOpen
     EXTERNAL_SOURCE_DIR "${THEROCK_ROCM_LIBRARIES_SOURCE_DIR}/projects/miopen"
     BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/MIOpen"
@@ -107,6 +109,7 @@ if(THEROCK_ENABLE_MIOPEN)
       -DMIOPEN_TEST_DISCRETE=OFF
       -DBoost_COMPILER=${_THEROCK_MIOPEN_OVERRIDE_BOOST_COMPILER}
       "-DMIOPEN_INSTALL_GPU_DATABASES=\"${THEROCK_AMDGPU_TARGETS}\""
+      -DMIOPEN_USE_HIPBLASLT="${_hipblaslt_declared}"
     CMAKE_INCLUDES
       therock_explicit_finders.cmake
     COMPILER_TOOLCHAIN
