--- a/comm-libs/CMakeLists.txt
+++ b/comm-libs/CMakeLists.txt
@@ -62,6 +62,12 @@ if(THEROCK_ENABLE_RCCL AND THEROCK_SANITIZER STREQUAL "")
   list(APPEND _rccl_subproject_names rccl)
 
   if(THEROCK_BUILD_TESTING)
+
+    set(_rccl_tests_optional_deps)
+    if(THEROCK_ENABLE_MPI)
+      set(_rccl_tests_optional_deps "therock-openmpi")
+    endif()
+
     therock_cmake_subproject_declare(rccl-tests
       EXTERNAL_SOURCE_DIR "${THEROCK_ROCM_SYSTEMS_SOURCE_DIR}/projects/rccl-tests"
       BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/rccl-tests"
@@ -80,6 +86,7 @@ if(THEROCK_ENABLE_RCCL AND THEROCK_SANITIZER STREQUAL "")
         hip-clr
         hipify
         rccl
+        ${_rccl_tests_optional_deps}
     )
     therock_cmake_subproject_glob_c_sources(rccl-tests
       SUBDIRS
