--- a/profiler/CMakeLists.txt
+++ b/profiler/CMakeLists.txt
@@ -229,6 +229,11 @@ endif(THEROCK_BUILD_TESTING)
     else()
       string(REPLACE ";" "\\;" _ROCPROFSYS_GFX_TARGETS_ESCAPED "${THEROCK_DIST_AMDGPU_TARGETS}")
     endif()
+    
+    set(_rocprofiler_systems_optional_deps)
+    if(THEROCK_ENABLE_MPI)
+      set(_rocprofiler_systems_optional_deps therock-openmpi)
+    endif()
 
     therock_cmake_subproject_declare(rocprofiler-systems
       USE_DIST_AMDGPU_TARGETS
@@ -245,6 +250,7 @@ endif(THEROCK_BUILD_TESTING)
         -DROCPROFSYS_BUILD_FOR_THEROCK=ON
         -DROCPROFSYS_GFX_TARGETS="${_ROCPROFSYS_GFX_TARGETS_ESCAPED}"
         -DROCPROFSYS_BUILD_SPDLOG=OFF
+        "-DROCPROFSYS_USE_MPI=${THEROCK_ENABLE_MPI}"
       INSTALL_RPATH_DIRS
         "lib"
         "lib/rocprofiler-systems"
@@ -261,6 +267,7 @@ endif(THEROCK_BUILD_TESTING)
         therock-fmt
         ${THEROCK_BUNDLED_LIBDRM}
         ${THEROCK_BUNDLED_SQLITE3}
+        ${_rocprofiler_systems_optional_deps}
     )
     therock_cmake_subproject_glob_c_sources(rocprofiler-systems
       SUBDIRS .
