--- a/.github/workflows/multi_arch_build_portable_linux.yml
+++ b/.github/workflows/multi_arch_build_portable_linux.yml
@@ -231,6 +231,13 @@ jobs:
           echo "Artifacts:"
           ls -lh build/artifacts/*.tar.xz 2>/dev/null || echo "No artifacts found"
 
+      - name: Configure AWS Credentials (refresh for push)
+        if: ${{ !github.event.pull_request.head.repo.fork }}
+        uses: aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708 # v5.1.1
+        with:
+          aws-region: us-east-2
+          role-to-assume: arn:aws:iam::692859939525:role/therock-ci
+
       - name: Push stage artifacts
         if: ${{ !github.event.pull_request.head.repo.fork }}
         run: |
@@ -335,6 +342,13 @@ jobs:
           ccache -s -v
           echo "Artifacts:"
           ls -lh build/artifacts/*.tar.xz 2>/dev/null || echo "No artifacts found"
+
+      - name: Configure AWS Credentials (refresh for push)
+        if: ${{ !github.event.pull_request.head.repo.fork }}
+        uses: aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708 # v5.1.1
+        with:
+          aws-region: us-east-2
+          role-to-assume: arn:aws:iam::692859939525:role/therock-ci
 
       - name: Push stage artifacts
         if: ${{ !github.event.pull_request.head.repo.fork }}
@@ -442,6 +456,13 @@ jobs:
           echo "Artifacts:"
           ls -lh build/artifacts/*.tar.xz 2>/dev/null || echo "No artifacts found"
 
+      - name: Configure AWS Credentials (refresh for push)
+        if: ${{ !github.event.pull_request.head.repo.fork }}
+        uses: aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708 # v5.1.1
+        with:
+          aws-region: us-east-2
+          role-to-assume: arn:aws:iam::692859939525:role/therock-ci
+
       - name: Push stage artifacts
         if: ${{ !github.event.pull_request.head.repo.fork }}
         run: |
@@ -540,6 +561,13 @@ jobs:
           echo "Artifacts:"
           ls -lh build/artifacts/*.tar.xz 2>/dev/null || echo "No artifacts found"
 
+      - name: Configure AWS Credentials (refresh for push)
+        if: ${{ !github.event.pull_request.head.repo.fork }}
+        uses: aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708 # v5.1.1
+        with:
+          aws-region: us-east-2
+          role-to-assume: arn:aws:iam::692859939525:role/therock-ci
+
       - name: Push stage artifacts
         if: ${{ !github.event.pull_request.head.repo.fork }}
         run: |
@@ -636,6 +664,13 @@ jobs:
           ccache -s -v
           echo "Artifacts:"
           ls -lh build/artifacts/*.tar.xz 2>/dev/null || echo "No artifacts found"
+
+      - name: Configure AWS Credentials (refresh for push)
+        if: ${{ !github.event.pull_request.head.repo.fork }}
+        uses: aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708 # v5.1.1
+        with:
+          aws-region: us-east-2
+          role-to-assume: arn:aws:iam::692859939525:role/therock-ci
 
       - name: Push stage artifacts
         if: ${{ !github.event.pull_request.head.repo.fork }}
