--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-CppHeaderParser>=2.7.4
-build>=1.2.2
-meson>=1.7.0
-python-magic>=0.4.27; platform_system != "Windows"
-PyYAML==6.0.2
-pyzstd>=0.16.0
-setuptools>=80.9.0
-tomli==2.2.1; python_version <= '3.10'
-pytest-cmake==0.13.0
-mako>=1.1.3
-boto3>=1.42.6
+# Core dependencies
+pandas>=2.0.0
+numpy>=1.24.0
 
-# hipBLASLt deps
-joblib>=1.4.2
-msgpack>=1.1.0
+# LangChain framework
+langchain>=0.1.0
+langchain-openai>=0.0.5
+openai>=1.0.0
+
+# Guardrails AI
+guardrails-ai>=0.4.0
+
+# Optional but recommended
+python-dotenv>=1.0.0
+
+# For better output formatting
+rich>=13.0.0
