[CI] Fix shell compatibility and version alignment issues
- Add clarifying comment that bash syntax works due to shell: bash default
- Fix PyTorch Audio/Vision version mismatch in Windows build workflow
  When PyTorch uses stable commit, Audio/Vision must use matching versions
- Use --require-related-commit to ensure component version alignment

This ensures both workflows handle the CMake path bug correctly with
properly aligned component versions.

Part of #2700

--- a/.github/workflows/build_windows_pytorch_wheels.yml
+++ b/.github/workflows/build_windows_pytorch_wheels.yml
@@ -189,12 +189,16 @@ jobs:
           python ./external-builds/pytorch/pytorch_torch_repo.py checkout \
             --checkout-dir ${{ env.CHECKOUT_ROOT }}/torch \
             --repo-hashtag 0bc5144aee9ee503ed74939a413b5fa0b04de315
+          # IMPORTANT: Audio and Vision must use commits that match the PyTorch version
+          # Using --require-related-commit to find the matching commits
           python ./external-builds/pytorch/pytorch_audio_repo.py checkout \
             --checkout-dir ${{ env.CHECKOUT_ROOT }}/audio \
-            --repo-hashtag nightly
+            --torch-dir ${{ env.CHECKOUT_ROOT }}/torch \
+            --require-related-commit
           python ./external-builds/pytorch/pytorch_vision_repo.py checkout \
             --checkout-dir ${{ env.CHECKOUT_ROOT }}/vision \
-            --repo-hashtag nightly
+            --torch-dir ${{ env.CHECKOUT_ROOT }}/torch \
+            --require-related-commit
 
       # Checkout stable sources from https://github.com/ROCm/pytorch
       - name: Checkout PyTorch Source Repos from stable branch
