--- a/.github/workflows/test_pytorch_wheels.yml
+++ b/.github/workflows/test_pytorch_wheels.yml
@@ -115,6 +115,7 @@ jobs:
       - name: Checkout PyTorch Source Repos from nightly branch
         if: ${{ (inputs.pytorch_git_ref == 'nightly') }}
         run: |
+          # Note: This uses bash syntax which works because we have shell: bash in defaults above
           # Check if we're on Windows and need to use the stable commit
           if [[ "${{ runner.os }}" == "Windows" ]]; then
             echo "WARNING: Windows detected - using stable commit 0bc5144 instead of nightly due to CMake path bug (Issue #2628)"
