[CI] Fix missing packaging module in Windows PyTorch build
- Add explicit 'Install Python dependencies' step before building wheels
- Install both 'packaging' and 'boto3' modules unconditionally
- Previously, packaging was only installed if rocm_version was provided
- This caused ModuleNotFoundError when rocm_version was not specified

Fixes build failure seen in:
https://github.com/ROCm/TheRock/actions/runs/20555128722/job/59038240305

Part of #2700

--- a/.github/workflows/build_windows_pytorch_wheels.yml
+++ b/.github/workflows/build_windows_pytorch_wheels.yml
@@ -219,10 +219,13 @@ jobs:
               --torch-dir ${{ env.CHECKOUT_ROOT }}/torch \
               --require-related-commit
 
+      - name: Install Python dependencies
+        run: |
+          pip install packaging boto3
+
       - name: Determine optional arguments passed to `build_prod_wheels.py`
         if: ${{ inputs.rocm_version }}
         run: |
-          pip install packaging
           python build_tools/github_actions/determine_version.py \
             --rocm-version ${{ inputs.rocm_version }}
 
