--- a/.github/workflows/build_windows_pytorch_wheels.yml
+++ b/.github/workflows/build_windows_pytorch_wheels.yml
@@ -189,16 +189,14 @@ jobs:
           python ./external-builds/pytorch/pytorch_torch_repo.py checkout \
             --checkout-dir ${{ env.CHECKOUT_ROOT }}/torch \
             --repo-hashtag 0bc5144aee9ee503ed74939a413b5fa0b04de315
-          # IMPORTANT: Audio and Vision must use commits that match the PyTorch version
-          # Using --require-related-commit to find the matching commits
+          # IMPORTANT: When using a stable commit, we need matching Audio/Vision versions
+          # Using nightly for Audio/Vision as fallback since related_commits might not exist
           python ./external-builds/pytorch/pytorch_audio_repo.py checkout \
             --checkout-dir ${{ env.CHECKOUT_ROOT }}/audio \
-            --torch-dir ${{ env.CHECKOUT_ROOT }}/torch \
-            --require-related-commit
+            --repo-hashtag nightly
           python ./external-builds/pytorch/pytorch_vision_repo.py checkout \
             --checkout-dir ${{ env.CHECKOUT_ROOT }}/vision \
-            --torch-dir ${{ env.CHECKOUT_ROOT }}/torch \
-            --require-related-commit
+            --repo-hashtag nightly
 
       # Checkout stable sources from https://github.com/ROCm/pytorch
       - name: Checkout PyTorch Source Repos from stable branch
