--- a/profiler/CMakeLists.txt
+++ b/profiler/CMakeLists.txt
@@ -81,7 +81,9 @@ if(THEROCK_ENABLE_ROCPROFV3)
       ${THEROCK_BUNDLED_ELFUTILS}
       ${THEROCK_BUNDLED_LIBDRM}
       ${THEROCK_BUNDLED_SQLITE3}
-    INTERFACE_LINK_DIRS
+      INTERFACE_INCLUDE_DIRS
+      include
+      INTERFACE_LINK_DIRS
       lib
       lib/rocm_sysdeps/lib
     INTERFACE_INSTALL_RPATH_DIRS
@@ -203,9 +205,10 @@ if(THEROCK_ENABLE_ROCPROFV3)
   ##############################################################################
   # rocprofiler-systems
   ##############################################################################
-  # rocprofiler-systems requires GCC, but sanitizer builds use Clang.
-  # Skip enabling rocprofiler-systems when building with sanitizers.
-  if (THEROCK_ENABLE_ROCPROFSYS AND THEROCK_SANITIZER STREQUAL "")
+  if (THEROCK_ENABLE_ROCPROFSYS)
+    # Escape semicolons in GPU targets list to prevent shell interpretation
+    string(REPLACE ";" "\\;" _ROCPROFSYS_GFX_TARGETS_ESCAPED "${THEROCK_AMDGPU_TARGETS}")
+
     therock_cmake_subproject_declare(rocprofiler-systems
       USE_DIST_AMDGPU_TARGETS
       EXTERNAL_SOURCE_DIR "${THEROCK_ROCM_SYSTEMS_SOURCE_DIR}/projects/rocprofiler-systems"
@@ -218,6 +221,13 @@ if(THEROCK_ENABLE_ROCPROFV3)
         -DROCPROFSYS_BUILD_LIBIBERTY=ON
         -DROCPROFSYS_BUILD_BOOST=ON
         -DROCPROFSYS_BUILD_DYNINST=ON
+        -DROCPROFSYS_BUILD_TESTING=ON
+        -DROCPROFSYS_INSTALL_TESTING=ON
+        -DROCPROFSYS_BUILD_EXAMPLES=ON
+        -DROCPROFSYS_INSTALL_EXAMPLES=ON
+        -DROCPROFSYS_CI=ON
+        -DROCPROFSYS_GFX_TARGETS="${_ROCPROFSYS_GFX_TARGETS_ESCAPED}"
+        -DROCPROFSYS_DISABLE_EXAMPLES=lulesh
       CMAKE_INCLUDES
         therock_explicit_finders.cmake
       RUNTIME_DEPS
