Add therock-tbb runtime_dep to rocprofiler-systems

--- a/profiler/CMakeLists.txt
+++ b/profiler/CMakeLists.txt
@@ -235,6 +235,7 @@ if(THEROCK_ENABLE_ROCPROFV3)
         ${THEROCK_BUNDLED_BINUTILS}
         ${THEROCK_BUNDLED_LIBDRM}
         ${THEROCK_BUNDLED_SQLITE3}
+        therock-tbb
         therock-dyninst
         therock-nlohmann-json
     )
