Mark hipdnn artifact as TARGET_NEUTRAL.

--- a/ml-libs/CMakeLists.txt
+++ b/ml-libs/CMakeLists.txt
@@ -202,6 +202,7 @@ if(THEROCK_ENABLE_HIPDNN)
   therock_cmake_subproject_activate(hipDNN)
 
   therock_provide_artifact(hipdnn
+    TARGET_NEUTRAL
     DESCRIPTOR artifact-hipdnn.toml
     COMPONENTS
       dbg
