--- a/.github/workflows/release_portable_linux_packages.yml
+++ b/.github/workflows/release_portable_linux_packages.yml
@@ -192,13 +192,6 @@ jobs:
         with:
           python-version: 3.12
 
-      - name: Setup ccache
-        run: |
-          ./build_tools/setup_ccache.py \
-            --config-preset "github-oss-presubmit" \
-            --dir "$(dirname $CCACHE_CONFIGPATH)" \
-            --local-path "$CACHE_DIR/ccache"
-
       # TODO: We shouldn't be using a cache on actual release branches, but it
       # really helps for iteration time.
       - name: Enable cache
@@ -389,6 +382,7 @@ jobs:
           key: portable-linux-package-matrix-v1-${{ matrix.target_bundle.amdgpu_family }}-${{ github.sha }}
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
         with:
           name: ccache_log
           path: ${{ env.OUTPUT_DIR }}/build/logs/ccache*
